If applied, this commit updates root.html file

--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -11,7 +11,7 @@
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links} 
-		<br> <br>
+		<br>
 		<h3>Task 2.6: Some Programming on the WebServer</h3>
 		<p>In this task we implement code for some api Get requests as listed below in the sub-tasks.<br>
 			The api calls can be made as per instructions provided under each request.
@@ -20,7 +20,7 @@
 			<li>Sub-task 2.6.1 Multiply: <br>
 				This Get request takes TWO integer argumemnts and returns the result of the multiplication of the arguments.<br>
 				This api request is made by adding the query to the host name and supply the required arguments as shown below.<br><br>
-				/multiply?num1=(value of the first argument)&num2=(value of the second argument). <br><br>
+				/multiply?num1=value of the first argument&num2=value of the second argument <br><br>
 				<b>For example: /multiply?num1=8&num2=5 </b>
 			</li> <br>
 			<li>Sub-task 2.6.2 GitHub: <br>
@@ -39,7 +39,7 @@
 					<li>Maximum of Two Numbers: Comapares two numbers and returns the larger number<br>
 						This api Get request is made as shown below. <br>
 						/max?num1=value of the first number&num2=value of the second number<br><br>
-						<b>For example: /num1=250&num2=80</b>
+						<b>For example: /max?num1=250&num2=80</b>
 					</li>
 
 				</ol>
